--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -3,12 +3,7 @@
 <head>
     <title>Weather App</title>
     <link rel="stylesheet" href="/css/bootstrap.css">
-    <!--link rel="stylesheet" href="/css/main.css"-->
-    <style>
-    	#main{
-    		padding: 0px 50px
-    	}
-    </style>
+    <link rel="stylesheet" href="/css/weatherapp.css">
 </head>
 <body>
 
